<resources>
    <string name="app_name">Simple Movie Catalog</string>
    <string name="movie">Movie</string>
    <string name="favorite">Favorite</string>
    <string name="title">Title</string>
    <string name="voteAverage">VoteAverage</string>
    <string name="releaseDate">ReleaseDate</string>
    <string name="overview">OverView</string>
    <string name="go">Go!</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="the_movie_data_base">The Movie Data Base</string>
    <string name="tv_about">This is a simple Movie Catalog written in Kotlin using a modern Android Architecture</string>
    <string name="delete_to_favorites">Remove to Favorites</string>
</resources>